--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beauty-app",
+  "name": "react-next.js-with-full-stack-meal-order-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,10 +14,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
