--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jquery": "^3.6.4",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-outside-click-handler": "^1.3.0"
+    "react-outside-click-handler": "^1.3.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
