--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fancybox": "^0.2.5",
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
     "react-owl-carousel": "^2.3.3",
