--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,7 @@
 {
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#302F04",
+        "titleBar.activeBackground": "#444206",
+        "titleBar.activeForeground": "#FCFBDD"
+    }
 }
