--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "jquery": "^3.6.4",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fancybox": "^0.2.5",
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
