--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
     "react-owl-carousel": "^2.3.3",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
