--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
     "react-owl-carousel": "^2.3.3",
+    "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
+    "save": "^2.9.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
