--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "formik": "^2.2.9",
     "jquery": "^3.6.4",
     "next": "^12.3.1",
